--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
